overlays/development/deployment.yaml
# Source: nginx/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gopoc-app2-nginx
  namespace: gopoc-app2
spec:
  template:
    spec:
      containers:
      - name: nginx
        image: aypx/gitops-poc-app-1:develop-c287195-1620140504 # {"$imagepolicy": "flux-system:app-application-1"}
